TEST_PROGRAMS/INVALID/prabhjot_sandhu/multassign.min
var x:int;
var y: int;

x,y = 10,20;

